update read_maze.py to allow passing maze file path; separate maze file into mazes/

--- a/maze/display_maze_text.ipynb
+++ b/maze/display_maze_text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "import sys\n",
@@ -21,29 +21,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from read_maze import load_maze, maze_cells, get_local_maze_information\n",
-    "load_maze()\n",
+    "load_maze('mazes/final.npy')\n",
     "\n",
     "walls = maze_cells[:,:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "x x x x x \n",
-      "x x x x x \n",
-      "x x x x x \n",
-      "x x x x x \n",
-      "x x x x x \n",
+      "x - - - x \n",
+      "x - x x x \n",
+      "x - x - - \n",
+      "x - x x x \n",
       "\n"
      ]
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -78,8 +78,8 @@
       "x - x \n",
       "\n",
       "0 0 0 \n",
-      "0 0 1 \n",
       "0 0 0 \n",
+      "0 2 0 \n",
       "\n"
      ]
     }
