remove unnecessary imports

--- a/maze/ascii_maze_example.ipynb
+++ b/maze/ascii_maze_example.ipynb
@@ -2,29 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append('..')\n",
-    "\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import numpy as np\n",
-    "from util import *"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from util import *\n",
     "from read_maze import load_maze, maze_cells, get_local_maze_information\n",
     "load_maze('mazes/final.npy')\n",
     "\n",
@@ -33,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -62,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -78,8 +60,8 @@
       "x - x \n",
       "\n",
       "0 0 0 \n",
+      "0 0 2 \n",
       "0 0 0 \n",
-      "0 2 0 \n",
       "\n"
      ]
     }
