fix ascii plotting example

--- a/maze/test/ascii_maze_example.ipynb
+++ b/maze/test/ascii_maze_example.ipynb
@@ -2,30 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "from util import *\n",
-    "from read_maze import load_maze, maze_cells, get_local_maze_information\n",
-    "load_maze('mazes/final.npy')\n",
+    "from maze.lib.util import *\n",
+    "from maze.lib.read_maze import load_maze, maze_cells, get_local_maze_information\n",
+    "load_maze('../mazes/final.npy')\n",
     "\n",
     "walls = maze_cells[:,:,0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "x x x x x \n",
-      "x - - - x \n",
-      "x - x x x \n",
-      "x - x - - \n",
-      "x - x x x \n",
+      "x x x x x \n",
+      "x x x x x \n",
+      "x x x x x \n",
+      "x x x x x \n",
       "\n"
      ]
     }
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -60,7 +64,7 @@
       "x - x \n",
       "\n",
       "0 0 0 \n",
-      "0 0 2 \n",
+      "0 0 1 \n",
       "0 0 0 \n",
       "\n"
      ]
